<resources>
    <string name="app_name">INSOPTAndroidPractice</string>


    <!-- 바텀네비게이션 -->
    <string name="bnv_main_home">홈</string>
    <string name="bnv_main_search">검색</string>
    <string name="bnv_main_mypage">마이페이지</string>


    <!-- 로그인 뷰 -->
    <string name="tv_signin_id">ID</string>
    <string name="et_signin_id">아이디를 입력하세요</string>
    <string name="tv_signin_pw">PW</string>
    <string name="et_signin_pw">비밀번호를 입력하세요</string>
    <string name="tv_signin_loginbtn">LOGIN</string>
    <string name="tv_signin_signupbtn">JOIN</string>
    <string name="sb_signin_success">로그인에 성공하셨습니다</string>
    <string name="tv_signin_auto">AUTO</string>
    <string name="tm_signin_autoon">자동로그인이 설정되었습니다</string>
    <string name="tm_signin_autooff">자동로그인이 해제되었습니다</string>
    <string name="tm_signin_login">아이디 혹은 비밀번호를 입력하세요</string>

    <!-- 회원가입 뷰 -->
    <string name="tv_signup_signup">회원가입</string>
    <string name="sb_signup_necessary">ID와 PW는 필수항목입니다</string>
    <string name="tv_signup_id">ID*</string>
    <string name="et_signup_id">6 ~ 10글자</string>
    <string name="sb_signup_id">ID는 최소 6글자입니다</string>
    <string name="tv_signup_pw">PW*</string>
    <string name="et_signup_pw">8 ~ 12글자</string>
    <string name="sb_signup_pw">PW는 최소 8글자입니다</string>
    <string name="tv_signup_mbti">mbti</string>
    <string name="et_signup_mbti">최대 4글자</string>
    <string name="tv_signup_donebtn">회원가입 완료</string>
    <string name="sb_signup_done">회원가입이 완료되었습니다</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>